we should actually release blueocean-executor-info but with all the deprecated warnings
Signed-off-by: olivier lamy <olamy@apache.org>

--- a/pom.xml
+++ b/pom.xml
@@ -331,6 +331,12 @@
             <version>${project.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>blueocean-executor-info</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <!-- TODO: should be moved out of blueocean repo as separate plugin -->
         <dependency>
             <groupId>${project.groupId}</groupId>
