--- a/blueocean/pom.xml
+++ b/blueocean/pom.xml
@@ -108,6 +108,12 @@
             <artifactId>blueocean-jira</artifactId>
         </dependency>
 
+        <!-- TODO remove with next release -->
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>blueocean-executor-info</artifactId>
+        </dependency>
+
         <!-- Bundled plugins for improved out of the box experience -->
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
