--- a/blueocean/pom.xml
+++ b/blueocean/pom.xml
@@ -108,12 +108,11 @@
             <artifactId>blueocean-jira</artifactId>
         </dependency>
 
-        <!-- JENKINS-56773 - Disabled until executor plugin has performance improvements made
+        <!-- TODO remove with next release -->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>blueocean-executor-info</artifactId>
         </dependency>
-        -->
 
         <!-- Bundled plugins for improved out of the box experience -->
         <dependency>
