Make executor plugin optional

--- a/blueocean/pom.xml
+++ b/blueocean/pom.xml
@@ -112,6 +112,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>blueocean-executor-info</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <!-- Bundled plugins for improved out of the box experience -->
