Upgrade UA Parser Library
`ua_parser:ua-parser` has been replaced by `com.github.ua-parser:uap-java`

More info here - https://github.com/tobie/ua-parser/

The library at older coordinates was never published to Maven Central.
The new one exists on Maven Central.

--- a/blueocean-rest-impl/pom.xml
+++ b/blueocean-rest-impl/pom.xml
@@ -92,8 +92,8 @@
         </dependency>
 
         <dependency>
-            <groupId>ua_parser</groupId>
-            <artifactId>ua-parser</artifactId>
+            <groupId>com.github.ua-parser</groupId>
+            <artifactId>uap-java</artifactId>
         </dependency>
 
         <dependency>
