--- a/pom.xml
+++ b/pom.xml
@@ -705,9 +705,9 @@
         </dependency>
 
         <dependency>
-            <groupId>ua_parser</groupId>
-            <artifactId>ua-parser</artifactId>
-            <version>1.3.0</version>
+            <groupId>com.github.ua-parser</groupId>
+            <artifactId>uap-java</artifactId>
+            <version>1.5.0</version>
             <exclusions>
               <!-- commons-collections comes from jenkins core -->
               <exclusion>
