--- a/blueocean/pom.xml
+++ b/blueocean/pom.xml
@@ -106,6 +106,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>blueocean-jira</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <!-- TODO remove with next release -->
