--- a/blueocean/pom.xml
+++ b/blueocean/pom.xml
@@ -149,6 +149,12 @@
             <groupId>com.mashape.unirest</groupId>
             <artifactId>unirest-java</artifactId>
             <scope>test</scope>
+            <exclusions>
+              <exclusion>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+              </exclusion>
+            </exclusions>
         </dependency>
 
     </dependencies>
