--- a/blueocean-jwt/pom.xml
+++ b/blueocean-jwt/pom.xml
@@ -18,6 +18,12 @@
       <dependency>
           <groupId>org.bitbucket.b_c</groupId>
           <artifactId>jose4j</artifactId>
+          <exclusions>
+              <exclusion>
+                  <groupId>org.slf4j</groupId>
+                  <artifactId>slf4j-api</artifactId>
+              </exclusion>
+          </exclusions>
       </dependency>
       <dependency>
           <groupId>${project.groupId}</groupId>
