--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,7 @@
       <dependency>
           <groupId>commons-codec</groupId>
           <artifactId>commons-codec</artifactId>
+          <version>1.15</version>
           <scope>provided</scope>
       </dependency>
       <dependency>
