[JENKINS-65445] remove usage of guava in module blueocean-bitbucket-pipeline
Signed-off-by: olivier lamy <olamy@apache.org>

--- a/blueocean-bitbucket-pipeline/pom.xml
+++ b/blueocean-bitbucket-pipeline/pom.xml
@@ -54,6 +54,11 @@
       <scope>test</scope>
     </dependency>
 
+      <dependency>
+          <groupId>${project.groupId}</groupId>
+          <artifactId>blueocean-commons</artifactId>
+      </dependency>
+
     <dependency>
       <groupId>com.github.tomakehurst</groupId>
       <artifactId>wiremock-jre8-standalone</artifactId>
