--- a/blueocean-pipeline-api-impl/pom.xml
+++ b/blueocean-pipeline-api-impl/pom.xml
@@ -188,23 +188,6 @@
     </dependencies>
 
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.jacoco</groupId>
-                    <artifactId>jacoco-maven-plugin</artifactId>
-                    <configuration>
-                        <excludes>
-                            <!-- Exclude scm abstract classes from code coverage, these are already covered in their implementations in
-                                 blueocean-git-pipeline and blueocean-github-pipeline modules.
-                                 These should move over to blueocean-rest module
-                            -->
-                            <exclude>io/jenkins/blueocean/rest/impl/pipeline/scm/**/*</exclude>
-                        </excludes>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -218,6 +201,20 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco.version}</version>
+                <configuration>
+                    <excludes>
+                        <!-- Exclude scm abstract classes from code coverage, these are already covered in their implementations in
+                                 blueocean-git-pipeline and blueocean-github-pipeline modules.
+                                 These should move over to blueocean-rest module
+                            -->
+                        <exclude>io/jenkins/blueocean/rest/impl/pipeline/scm/**/*</exclude>
+                    </excludes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
