--- a/blueocean-commons/pom.xml
+++ b/blueocean-commons/pom.xml
@@ -19,6 +19,10 @@
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>jackson2-api</artifactId>
     </dependency>
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-lang3</artifactId>
+      </dependency>
   </dependencies>
 
   <build>
