fix some upperBound
Signed-off-by: Olivier Lamy <olamy@apache.org>

--- a/pom.xml
+++ b/pom.xml
@@ -282,6 +282,24 @@
             <version>2.14</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>structs</artifactId>
+            <version>1.23</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jenkins-ci</groupId>
+            <artifactId>symbol-annotation</artifactId>
+            <version>1.23</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>script-security</artifactId>
+            <version>1.77</version>
+        </dependency>
+
         <!-- Module versions -->
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -455,7 +473,7 @@
         <dependency>
             <groupId>io.jenkins.plugins</groupId>
             <artifactId>caffeine-api</artifactId>
-            <version>2.9.0-17.v79e9099a51e3</version>
+            <version>2.9.1-23.v51c4e2c879c8</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
