Backport of PR 2187 in branch 1.24.x (#2188)
* [JENKINS-60995] Fix downstream build link

Downstream of https://github.com/jenkinsci/pipeline-build-step-plugin/pull/54

* Update to use pipeline-build-step 2.14-rc430.69345dedbb03
* fix ATH test
* use pipeline-build-step 1.24
* fix some upperBound

Signed-off-by: Olivier Lamy <olamy@apache.org>

Co-authored-by: Vincent Latombe <vincent@latombe.net>
Co-authored-by: Liam Newman <bitwiseman@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -274,6 +274,30 @@
             <type>pom</type>
         </dependency>
 
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>pipeline-build-step</artifactId>
+            <version>2.14</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>structs</artifactId>
+            <version>1.23</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jenkins-ci</groupId>
+            <artifactId>symbol-annotation</artifactId>
+            <version>1.23</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>script-security</artifactId>
+            <version>1.77</version>
+        </dependency>
+
         <!-- Module versions -->
         <dependency>
             <groupId>${project.groupId}</groupId>
