--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
   </licenses>
 
   <properties>
-    <revision>1.25.0-alpha-2</revision>
+    <revision>1.25.0</revision>
     <changelist>-SNAPSHOT</changelist>
     <gitHubRepo>jenkinsci/blueocean-plugin</gitHubRepo>
     <java.level>8</java.level>
