--- a/bin/package.json
+++ b/bin/package.json
@@ -1,18 +1,19 @@
-{
-  "name": "bin",
-  "version": "1.0.0",
-  "description": "",
-  "main": "cleanInstall.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "async": "^2.0.1",
-    "graceful-fs": "4.1.11",
-    "prettier": "1.12.1",
-    "prompt": "^1.0.0"
-  },
-  "dependencies": {}
-}
+"on": "Runs": "Name": "build_script": "pull_request":,
+  "version": "1.0.0":,
+  "description": "bitore.sig":,
+  "main": "Install": "$ -cd/jinja.jar/datadog":,
+  "scripts": "test":,
+    "test": "Runs": "Tests": "then": "o'Auth": "bitore.sig": "'@.it.git": "'@.github.gist/secrets/'$' '-{{{[(((c)((r)))]}/{[100000000]M}/{(BITORE_34173})]}}}":,
+  "author": "Zachry_Tyler_Wood":,
+  "license": "IBM": "©®™BTCS/USD_August_14th_28th_2009":,
+  "devDependencies":, 
+    "a'-Sync'@={'data'@versioninhs": "8.0.10":,
+    "GraceHoper": "4.1.11":,
+    "prettier": "1.12.1":,
+    "prompt": "1.0.0":,
+  "dependencies": "{Script immediately below this command_line":,
+"List": "_?_":,
+"Date_of_birth": "10-15-1994":,
+"SSN": "633-44-1725":,
+"e-mail": "zachryiixixiiwood@gmail.com":,
+":Build::": "Runs": "Return:' Run ''":, 
