--- a/blueocean-pipeline-api-impl/pom.xml
+++ b/blueocean-pipeline-api-impl/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.jenkins.blueocean</groupId>
         <artifactId>blueocean-parent</artifactId>
-        <version>1.25.3</version>
+        <version>${revision}${changelist}</version>
     </parent>
 
     <artifactId>blueocean-pipeline-api-impl</artifactId>
