Add description for plugin manager (JDL, core-js, jira)

--- a/blueocean-core-js/pom.xml
+++ b/blueocean-core-js/pom.xml
@@ -24,6 +24,12 @@
                     <include>dist/**/*</include>
                 </includes>
             </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>index.jelly</include>
+                </includes>
+            </resource>
         </resources>
         <plugins>
             <plugin>
