--- a/blueocean/pom.xml
+++ b/blueocean/pom.xml
@@ -157,6 +157,11 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>org.jenkinsci.plugins</groupId>
+            <artifactId>pipeline-model-parent</artifactId>
+            <version>999999-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
