mock static close
Signed-off-by: Olivier Lamy <olamy@apache.org>

--- a/blueocean-github-pipeline/pom.xml
+++ b/blueocean-github-pipeline/pom.xml
@@ -67,6 +67,11 @@
       <artifactId>matrix-auth</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-inline</artifactId>
+      <scope>test</scope>
+    </dependency>
 
   </dependencies>
 
