--- a/acceptance-tests/src/test/resources/multibranch/commit_message/Jenkinsfile
+++ b/acceptance-tests/src/test/resources/multibranch/commit_message/Jenkinsfile
@@ -1,5 +1,6 @@
 node {    
-    stage 'test'
-    checkout scm
-    echo 'test'
+    stage('test') {
+        checkout scm
+        echo 'test'
+    }
 }
